Second Commit regarding SIgn Up

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="shortcut icon" href="logo.svg" type="image/x-icon">
     <div id="two" style="display: flex;">
     <div class="sat" >
-        signup
+        Sign Up
     </div>
     <div class="sat">
         About
